# automation-api

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docker/: Rust_Dev_Dockerfile  Rust_Prod_Dockerfile
src/: main.rs
