[package]
name = "automate-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
amiquip = "0.4.0"
dotenv = "0.15.0"
reqwest = {version="0.11.6", features = ["json"]}
serde_json = "1.0.72"
